--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,8 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
-
+EditorStartupMap=/Game/Developers/loco/TestLevels/Test.Test
+GlobalDefaultGameMode=/Game/Blueprints/Core/BP_GameMode.BP_GameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
