--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
 EditorStartupMap=/Game/Developers/loco/TestLevels/Test.Test
 GlobalDefaultGameMode=/Game/Blueprints/Core/BP_GameMode.BP_GameMode_C
+GameInstanceClass=/Game/Blueprints/GameTools/MapCreator/BP_MapCreatorInstance.BP_MapCreatorInstance_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -15,4 +16,11 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/ScapeCube")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/ScapeCube")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="ScapeCubeGameModeBase")
+
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
+
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/ScapeCube.EaObstacle",NewName="/Script/ScapeCube.CObstacle")
 
